Fix overview page content, prevent x-axis scrollbar on mobile.

--- a/theme/_sass/theme.scss
+++ b/theme/_sass/theme.scss
@@ -657,6 +657,10 @@ body.header-menu-expanded {
   position: absolute;
   width: 100%;
   height: 100%;
+  padding: 0;
+  margin: 0;
+  top: 0;
+  left: 0;
   background: rgba(0, 0, 0, 0.4);
   transition: all 0.5s linear;
 }
